[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/main/CameraControlSplitScreen.gd" type="Script" id=1]
[ext_resource path="res://resources/tiles/Tiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/race/Race.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/main/Popup.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/scoreboard_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="SplitScreen" type="Node"]
script = ExtResource( 1 )

[node name="Screen" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1

[node name="TilesView" type="ViewportContainer" parent="Screen"]
margin_right = 423.0
margin_bottom = 720.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="Screen/TilesView"]
size = Vector2( 423, 720 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Screen/TilesView/Viewport"]
anchor_mode = 0
current = true

[node name="Tiles" parent="Screen/TilesView/Viewport" instance=ExtResource( 2 )]

[node name="RaceView" type="ViewportContainer" parent="Screen"]
margin_left = 433.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
stretch = true

[node name="Viewport" type="Viewport" parent="Screen/RaceView"]
size = Vector2( 847, 720 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Screen/RaceView/Viewport"]
anchor_mode = 0
current = true
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="Race" parent="Screen/RaceView/Viewport" instance=ExtResource( 3 )]

[node name="Popup" type="AcceptDialog" parent="."]
visible = true
margin_left = 451.0
margin_top = 104.0
margin_right = 797.0
margin_bottom = 361.0
popup_exclusive = true
window_title = ""
script = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="Text" type="Label" parent="Popup/VBoxContainer2"]
margin_right = 330.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Race finished"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/VBoxContainer2"]
margin_top = 74.0
margin_right = 330.0
margin_bottom = 213.0
size_flags_vertical = 3

[node name="Position" type="Label" parent="Popup/VBoxContainer2/VBoxContainer"]
margin_right = 330.0
margin_bottom = 31.0
size_flags_vertical = 3
text = "Position: "

[node name="Time" type="Label" parent="Popup/VBoxContainer2/VBoxContainer"]
margin_top = 35.0
margin_right = 330.0
margin_bottom = 66.0
size_flags_vertical = 3
text = "Time: "

[node name="Info" type="Label" parent="Popup/VBoxContainer2/VBoxContainer"]
margin_top = 76.0
margin_right = 330.0
margin_bottom = 95.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Please, enter your nickname;"
align = 1

[node name="NicknameInput" type="LineEdit" parent="Popup/VBoxContainer2/VBoxContainer"]
margin_top = 105.0
margin_right = 330.0
margin_bottom = 139.0
hint_tooltip = "nickname"
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
align = 1

[connection signal="confirmed" from="Popup" to="." method="_on_Popup_confirmed"]
[connection signal="focus_entered" from="Popup" to="Popup" method="_on_Popup_focus_entered"]
[connection signal="focus_exited" from="Popup" to="." method="_on_Popup_focus_exited"]
[connection signal="popup_hide" from="Popup" to="." method="_on_Popup_popup_hide"]
